# cchat

./: .clang-format  CMakeLists.txt  README.adoc
src/: client.c  common.h  server.c
